--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ permissions:
 
 env:
   AWS_REGION: eu-central-1
-  AWS_LIGHTSAIL_SERVICE_NAME: citizen-science-nl 
+  AWS_LIGHTSAIL_SERVICE_NAME: mapmaker 
 jobs:    
   buildnginx:
     name: 🌎 nginx webserver container...
