--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,17 +54,6 @@ jobs:
       steps:
         - name: 🗂  Getting code from Github
           uses: actions/checkout@v2
-        - name: 🤐 Make envfile
-          uses: SpicyPizza/create-envfile@v1.3
-          with:
-            envkey_DATABASEHOST: ${{ secrets.ENVKEY_DATABASEHOST }}
-            envkey_DATABASENAME: ${{ secrets.ENVKEY_DATABASENAME }}
-            envkey_DATABASEPASSWORD: ${{ secrets.ENVKEY_DATABASEPASSWORD }}
-            envkey_DATABASEUSER: ${{ secrets.ENVKEY_DATABASEUSER }}
-            envkey_SECRETKEY: ${{ secrets.ENVKEY_DJANGO_SECRET }}
-            envkey_DEBUG: "False"
-            file_name: .env
-            fail_on_empty: false
         - name: ⚙️  Updating to the latest versions
           run: |
             sudo apt-get update
@@ -85,7 +74,7 @@ jobs:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         - name: 🐳 Create a Docker Container for DJANGO
-          run: docker build -t csnl:latest .
+          run: docker build -t mapmaker:latest .
         - name: 📬 Upload Backend image to AWS container register
           run: |
             service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
