--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ gunicorn==20.1.0
 setuptools==65.5.1
 requests==2.28.2
 django-ckeditor==6.5.1
+django-tailwind
+fontawesome-free
+djangorestframework
