--- a/Infrastructure/nginx/Dockerfile
+++ b/Infrastructure/nginx/Dockerfile
@@ -5,7 +5,7 @@
 FROM nginx:1.19.0-alpine
 
 COPY Mapmaker ./Mapmaker
-COPY Mapmaker/static ./static
+COPY Mapmaker/static .
 COPY Infrastructure/nginx/default.conf ./etc/nginx/conf.d/default.conf
 
 EXPOSE 80
