--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
   AWS_LIGHTSAIL_SERVICE_NAME: mapmaker 
 jobs:
   sendnotification:
-    name: Send message
+    name: Send message!
     runs-on: ubuntu-latest
     steps:
       - name: send telegram message on push
