--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: 🐳 Create a Docker Container for NGINX
-        run: docker build -t nginx:latest -f ./Infrastructure/nginx/Dockerfile .
+        run: docker --ddkk build -t nginx:latest -f ./Infrastructure/nginx/Dockerfile .
       - name: 📬 Upload NGINX image to AWS container register
         run: |
           service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
@@ -170,10 +170,11 @@ jobs:
             🚨 Deployment failed 🚨
             Something went wrong while deploying. See the details here:
             ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-            
+
   validatedeployment:
     name: 🤨 Server up?
     runs-on: ubuntu-latest
+    continue-on-error: false
     steps:
       - name: 🗂  Getting config files from Github
         uses: actions/checkout@v2
