--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,12 @@ permissions:
 env:
   AWS_REGION: eu-central-1
   AWS_LIGHTSAIL_SERVICE_NAME: mapmaker 
+concurrency:
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+  cancel-in-progress: true
 jobs:
   startnotification:
-    name: 💬 Starting deployment - run ${{ github.run_id }}
+    name: 💬 Starting deployment 
     runs-on: ubuntu-latest
     steps:
       - name: send telegram message on push
@@ -21,7 +24,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           disable_notification: true
           message: |
-            🏗️ New deployment started
+            🏗️ New deployment started - run ${{ github.run_id }}
             Details:
             - By: ${{ github.actor }} 
             - Description: ${{ github.event.commits[0].message }}
