--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,6 +86,18 @@ jobs:
             --image nginx:latest
       - name: =========== All done. Cleaning up ♻️  ===========
         run: ls
+      - name: 🚨 Error Notifications
+        if: ${{ failure() }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            🚨 Deployment failed 🚨
+            Build ${{ github.run_id }} failed
+
+            Something went wrong while building the NGINX container
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
   builddjango:
       name: 🤠 building Django
@@ -122,7 +134,7 @@ jobs:
             ls
             python3 src/manage.py collectstatic --noinput
         - name: 🐳 Create a Docker Container for DJANGO
-          run: docker build -t mapmaker:latest .
+          run: docker --ddkk build -t mapmaker:latest .
         - name: 📬 Upload Backend image to AWS container register
           run: |
             service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
@@ -133,6 +145,19 @@ jobs:
               --image mapmaker:latest
         - name: =========== All done. Cleaning up ♻️  ===========
           run: ls
+        - name: 🚨 Error Notifications
+        if: ${{ failure() }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            🚨 Deployment failed 🚨
+            Build ${{ github.run_id }} failed
+            Something went wrong while building the Django container
+            
+            See the details here:
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
 
   deployimages:
@@ -159,12 +184,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: 🚀 Launching the Containers
         run: |
-          aws lightsail create-container-service-deployment --service-name ${{ env.AWS_LIGHTSAIL_SERVICE_NAME }} \
+          aws lightsail create-container-service-deployment--ddkk --service-name ${{ env.AWS_LIGHTSAIL_SERVICE_NAME }} \
           --containers file://Infrastructure/deploymentconfig.json \
           --public-endpoint file://Infrastructure/publicendpoint.json
       - name: =========== All done. Cleaning up ♻️  ===========
         run: ls
-      - name: Build Alerts
+      - name: 🚨 Error Notifications
         if: ${{ failure() }}
         uses: appleboy/telegram-action@master
         with:
@@ -173,7 +198,8 @@ jobs:
           message: |
             🚨 Deployment failed 🚨
             Build ${{ github.run_id }} failed
-            Something went wrong while deploying. See the details here:
+
+            Something went wrong while activating the containers to AWS. See the details here:
             ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
   validatedeployment:
@@ -204,4 +230,16 @@ jobs:
         run: python Infrastructure/AWS/checkdeploymentsuccess.py
       - name: =========== All done. Cleaning up ♻️  ===========
         run: ls
+      - name: 🚨 Error Notifications
+        if: ${{ failure() }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            🚨 Deployment failed 🚨
+            Build ${{ github.run_id }} failed
+
+            The server did not come online after deploying to AWS. 
+            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
   
