--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,6 +112,9 @@ jobs:
             envkey_EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER_GMAIL }}
             envkey_EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD_GMAIL }}
             envkey_DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+            envkey_DATABASE_USER: ${{ secrets.DATABASE_USER }}
+            envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+            envkey_DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
             envkey_DEBUG: "False"
             directory: src/core
             file_name: .env
