--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,7 +115,7 @@ jobs:
             envkey_DATABASE_USER: ${{ secrets.DATABASE_USER }}
             envkey_DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
             envkey_DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
-            envkey_DEBUG: "False"
+            envkey_DEBUG: "True"
             directory: src/core
             file_name: .env
             fail_on_empty: false
