--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,19 @@ jobs:
             🌎 server is up - we checked!
             Site: https://mapmaker.nl 
             Deployment log: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+  
+  AddMixpAnelAnnotation:
+    name: 🔭 Add Mixpanel annotation
+    needs: [deployimages, validatedeployment, buildnginx, builddjango, startnotification]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send annotation to Mixpanel
+        run: |
+          curl --request POST 
+          --url 'https://mixpanel.com/api/app/workspaces/3471787/annotations'
+          --header 'Authorization: ${{ secrets.MIXPANEL_TOKEN }}'
+          --data-raw '{"date":$(date +'%Y-%m-%d'),"description":${{ github.event.commits[0].message }} }'        
             
-
   buildnginx:
     name: 🌎 building nginx webserver
     needs: [startnotification]
