--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,11 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send annotation to Mixpanel
-        run: |
-          curl --request POST \
-          --url 'https://mixpanel.com/api/app/workspaces/3471787/annotations' \
-          --header 'Authorization: ${{ secrets.MIXPANEL_TOKEN }}' \
-          --data-raw '{"date":$(date +'%Y-%m-%d'),"description":${{ github.event.commits[0].message }} }'        
+        run: python Infrastructure/Mixpanel/addannotation.py ${{ github.event.commits[0].message }} ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} ${{ secrets.MIXPANEL_ANNOTATIONS }}
             
   buildnginx:
     name: 🌎 building nginx webserver
