--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,8 @@ jobs:
     name: 🔭 Add Mixpanel annotation
     runs-on: ubuntu-latest
     steps:
+      - name: 🗂  Getting code from Github
+        uses: actions/checkout@v2
       - name: Send annotation to Mixpanel
         run: python Infrastructure/Mixpanel/addannotation.py ${{ github.event.commits[0].message }} ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} ${{ secrets.MIXPANEL_ANNOTATIONS }}
             
