--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
   
   AddMixpAnelAnnotation:
     name: 🔭 Add Mixpanel annotation
+    needs: [validatedeployment, buildnginx, builddjango, startnotification]
     runs-on: ubuntu-latest
     steps:
       - name: 🗂  Getting code from Github
