--- a/Infrastructure/nginx/Dockerfile
+++ b/Infrastructure/nginx/Dockerfile
@@ -7,6 +7,7 @@ FROM nginx:1.19.0-alpine
 
 #Adding Django Static files into nginx so they dont have to be answered by Django
 COPY src/staticfiles/ ./static 
+COPY src/staticfiles/ ./staticfiles 
 #Specific settings so nginx works as a reverse proxy
 COPY Infrastructure/nginx/default.conf ./etc/nginx/conf.d/default.conf
 
