WSGI Updated settings

--- a/Infrastructure/Docker/Dockerfile
+++ b/Infrastructure/Docker/Dockerfile
@@ -18,13 +18,15 @@ RUN pip3 install -r requirements.txt
 # Copy the content of the local src directory to the working directory
 COPY src .
 
-
-# Specify the command to run on container start
-
 # This is the "standard" local development server and thus should not be used in prod
 #CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
 #This starts the production Gunicorn wsgi process on all ports
 # be aware that the wsgi can't serve static files. NGINX handles this
 #CMD [ "gunicorn", "-b", "0.0.0.0:8000", "core.wsgi:application"]
 # Implementation with uWSGI server instead of GUNICORN
-CMD [ "uwsgi", "-http :8000", "--module core.wsgi", "-L", "--enable-threads", "--thunder-lock"]
+#CMD [ "uwsgi", "-http", ":8000", "--module core.wsgi", "-L" "--thunder-lock"]
+CMD [ "uwsgi", "--http", "0.0.0.0:8000", \
+               "--uid", "uwsgi", \
+               "--plugins", "python3", \
+               "--protocol", "uwsgi", \
+               "--wsgi", "core.wsgi:application" ]
