--- a/Infrastructure/nginx/default.conf
+++ b/Infrastructure/nginx/default.conf
@@ -1,3 +1,5 @@
+proxy_cache_path /tmp/nginx keys_zone=mycache:1m;
+
 server {
     listen 80;
     location / {
@@ -8,6 +10,10 @@ server {
         proxy_redirect off;
        }
     location /static/ {
+        proxy_cache mycache;
+        proxy_cache_background_update on;
+        proxy_cache_use_stale updating;
+        proxy_cache_valid 60s;
         alias /static/;
         }
     location /healthcheck {
