--- a/Infrastructure/Docker/Dockerfile
+++ b/Infrastructure/Docker/Dockerfile
@@ -11,9 +11,9 @@ ENV PYTHONUNBUFFERED 1
 EXPOSE 8000
 
 # Copy the dependencies file to the working directory
-COPY Infrastructure/requirements.txt Infrastructure/requirements.txt
+COPY Infrastructure/requirements.txt .
 RUN pip3 install --upgrade pip
-RUN pip3 install -r Infrastructure/requirements.txt
+RUN pip3 install -r requirements.txt
 
 # Copy the content of the local src directory to the working directory
 COPY src .
