--- a/.github/workflows/autoscale.yml
+++ b/.github/workflows/autoscale.yml
@@ -1,6 +1,7 @@
+name: 📈 Autoscale
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/3 * * * *'
 
 env:
   AWS_REGION: eu-central-1
@@ -18,6 +19,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
+          pip install pandas
       - name: 🏢 Install Amazon Client
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
